# family-doctor

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  docker-compose.production.yaml  docker-compose.staging.yaml  docker-compose.yaml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-local.ps1  家庭药箱系统整体技术架构方案.md
.codex/: agent-final-stream-check.ndjson  (+4 more)
.codex-bin/: cargo.cmd  cargo.ps1  rustc.cmd  rustc.ps1
agent/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent/app/: __init__.py  config.py  main.py  prompting.py  schemas.py  tracing.py
agent/app/api/: consult.py  jobs.py  medicine.py
agent/app/graph/: builder.py  context.py  state.py
agent/app/graph/nodes/: emergency.py  match.py  parse.py  preprocess.py  rank.py  render.py  review.py  risk.py  safety.py  special_population.py  summarize.py
agent/app/llm/: openai_provider.py  provider.py
agent/app/services/: __init__.py  due_job_scheduler.py  system_expiry_scheduler.py
agent/app/tools/: __init__.py  cron_job_tool.py  intent_router.py  medicine_search.py  safety_tools.py
agent/prompts/: consult.v1.md  intent_router.system.v1.md  medicine_recognize.v1.md  parse.system.v1.md  render.system.v1.md  review.system.v1.md
agent/tests/: test_config.py  test_consult.py
agent/tests/eval/: cases.yaml  run_eval.py
app/: .gitignore  (+12 more)
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json  mobile.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs
(+157 files in other folders)
